test/classes/delete-free/borrowed/makeNewBorrowed.good
makeNewBorrowed.chpl:3: error: cannot create a 'borrowed' object using 'new'
makeNewBorrowed.chpl:4: error: cannot create a 'borrowed' object using 'new'
