test/classes/delete-free/borrowed/makeNewBorrowed.chpl
class C { }

var bC = new borrowed C();
var bCN = new borrowed C?();
